@@ -1,0 +1,23 @@
+# Generated by Django 2.2.15 on 2021-01-20 19:02
+
+from django.db import migrations, models
+import django.db.models.deletion
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ('app_products', '0100_remove_product_image'),
+    ]
+
+    operations = [
+        migrations.CreateModel(
+            name='StockLocation',
+            fields=[
+                ('id', models.AutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
+                ('location', models.CharField(blank=True, max_length=200, null=True)),
+                ('date_added', models.DateTimeField(auto_now_add=True, null=True)),
+                ('product_id', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.CASCADE, to='app_products.Product')),
+            ],
+        ),
+    ]
