@@ -1,0 +1,17 @@
+# Generated by Django 2.2.15 on 2021-01-20 19:04
+
+from django.db import migrations
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ('app_products', '0101_stocklocation'),
+    ]
+
+    operations = [
+        migrations.AlterModelOptions(
+            name='stocklocation',
+            options={'ordering': ['id']},
+        ),
+    ]
