@@ -1,0 +1,18 @@
+# Generated by Django 2.2.15 on 2021-01-20 19:20
+
+from django.db import migrations, models
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ('app_products', '0102_auto_20210120_1904'),
+    ]
+
+    operations = [
+        migrations.AddField(
+            model_name='product',
+            name='location_v2',
+            field=models.CharField(blank=True, max_length=200, null=True),
+        ),
+    ]
