@@ -1,0 +1,22 @@
+# Generated by Django 2.2.15 on 2021-01-20 21:26
+
+from django.db import migrations, models
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ('app_products', '0104_auto_20210120_1930'),
+    ]
+
+    operations = [
+        migrations.AlterModelOptions(
+            name='stocklocation',
+            options={'ordering': ['-id']},
+        ),
+        migrations.AlterField(
+            model_name='stocklocation',
+            name='date_added',
+            field=models.DateTimeField(blank=True, null=True),
+        ),
+    ]
