@@ -60,6 +60,18 @@ section #modal.image-modal .modal-close { font-size: 35px; line-height: 24px; }
 .image-modal .modal-container { padding: 0px; width: 500px; }
 .image-modal .modal-content { padding: 20px; }
 
+/* LOCATION MODAL */
+section #modal.location-modal { padding-top: 150px; }
+section #modal.location-modal .modal-container { padding: 0px; }
+section #modal.location-modal .modal-close { font-size: 35px; line-height: 24px; }
+.location-modal .modal-top-bar { background: #ddd; display: flex; justify-content: space-between; margin: 0px; padding: 10px 15px; border-bottom: 0px; }
+.location-modal .modal-top-bar h1 { font-size: 20px; margin: 0px; }
+.location-modal .modal-top-bar span { float: right; }
+.location-modal .modal-container { padding: 0px; width: 500px; }
+.location-modal .modal-content { padding: 20px; }
+.location-modal .edit-location { padding-bottom: 40px; margin-top: 20px; border-bottom: 1px solid #ddd; }
+.location-modal .edit-location button { padding: 6px 0px; width: 60px; }
+
 /* INDIVIDUAL MODAL STYLES */
 
 /* DELIVERY DETAILS MODAL */
