@@ -64,7 +64,7 @@
                             <td class="no-strike">-</td>
                             <td class="prod-name">{{ order_item.product_id.product_name }}</td>
                             <td>{{ order_item.product_id.sku }}</td>
-                            <td>{{ order_item.product_id.location }}</td>
+                            <td>{{ order_item.product_id.location_v2 }}</td>
                             <td class="no-strike">--</td>
                         </tr>
                         {% endif %}
