@@ -21,7 +21,7 @@
             <div class="details">
                 <div class="sku">{{ product.sku }}</div>
                 <div class="part-type">{{ product.part_type }}</div>
-                <div class="location">{{ product.location }}</div>
+                <div class="location">{{ product.location_v2 }}</div>
             </div>
             <div class="right">
                 {{ product.sku }}
