@@ -54,7 +54,7 @@
                             <td>£{{ product.sell_price }}</td>
                             <td>{{ product.brand }}</td>
                             <td>{{ product.supplier }}</td>		
-                            <td>{{ product.location }}</td>
+                            <td>{{ product.location_v2 }}</td>
                             <td class="stock"><span>{{ product.stock_qty }}</stock></td>
                             <td class="product-label">
                                 <form method="post" enctype="multipart/form-data">
